--- a/pages/clock/clockapp.css
+++ b/pages/clock/clockapp.css
@@ -4,12 +4,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
     margin: 0;
 }
 
+h1 {
+    color: #cccccc;
+}
+
 .clock-app {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
     background-color: #444444; 
     padding: 20px;
