--- a/pages/expense_tracker/expense.css
+++ b/pages/expense_tracker/expense.css
@@ -27,7 +27,7 @@ h2 {
 h1 {
     color: #FEE715;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     margin-bottom: -1px;
     margin-top: -15px;
     font-family: cursive;
@@ -40,7 +40,9 @@ form {
     margin-bottom: 20px;
 }
 
-input, select, button {
+input,
+select,
+button {
     padding: 10px;
     margin: 5px 0;
     font-size: 1em;
@@ -65,7 +67,8 @@ table {
     border: 1px solid #101820;
 }
 
-table th, table td {
+table th,
+table td {
     padding: 10px;
     text-align: left;
 }
@@ -79,10 +82,16 @@ table th {
 
 #total-expenses-display {
     text-align: center;
-     margin-top: 10px; 
-     font-weight: bold; 
-     color:#FEE715;
-     font-size: 45px;
-     font-family: cursive;
+    margin-top: 10px;
+    font-weight: bold;
+    color: #FEE715;
+    font-size: 45px;
+    font-family: cursive;
 
-} 
+}
+
+.header h1 {
+    font-size: 50px;
+    margin-top: 5px;
+    color: #FEE715;
+}
